# rust-synth

./: .gitignore  Cargo.toml  README.md
src/: dsp.rs  gui.rs  io.rs  main.rs  message.rs  midi.rs  synth.rs  voice.rs
synth-lib/: Cargo.toml
synth-lib/src/: audio.rs  dsp.rs  lib.rs  synth.rs  voice.rs
synth-plugin-jamba/: .cproject  .project  CMakeLists.txt  README.md  fetch_jamba.cmake
synth-plugin-jamba/archive/: README-macOS_64bits.txt  README-win_64bits.txt
synth-plugin-jamba/audio-unit/: audiounitconfig.h
synth-plugin-jamba/mac/: Info.plist
synth-plugin-jamba/resource/: RustDemoPlugin.uidesc
synth-plugin-jamba/src/cpp/: Plugin.h  RustDemoPluginCIDs.h  RustDemoPlugin_VST2.cpp  RustDemoPlugin_VST3.cpp  RustSynthLib.h  version.h.in
synth-plugin-jamba/src/cpp/GUI/: RustDemoPluginController.cpp  RustDemoPluginController.h
synth-plugin-jamba/src/cpp/RT/: RustDemoPluginProcessor.cpp  RustDemoPluginProcessor.h
synth-plugin-jamba/test/cpp/: test-RustDemoPlugin.cpp
synth-plugin-lib/: Cargo.toml
synth-plugin-lib/src/: lib.rs
synth-plugin-vst/: CMakeLists.txt
synth-plugin-vst/resource/: Info.plist  myplugineditor.uidesc
synth-plugin-vst/source/: myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h  version.h
synth-standalone/: Cargo.toml
synth-standalone/src/: gui.rs  io.rs  main.rs
